...

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
...

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_clear"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_signal"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_multiplication"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_division"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_7"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_8"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_9"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_subtraction"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_addition"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_equals"
        android:layout_width="0dp"
        android:layout_height="0dp"
...

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_0"
        android:layout_width="0dp"
        android:layout_height="0dp"
...
